<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/select_image_for_text_recognition"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.673" />

    <rememberance.day.on1945.GraphicOverlay
        android:id="@+id/graphic_overlay"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        app:layout_constraintBottom_toBottomOf="@id/image_view"
        app:layout_constraintLeft_toLeftOf="@id/image_view"
        app:layout_constraintRight_toRightOf="@id/image_view"
        app:layout_constraintTop_toTopOf="@id/image_view" />
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_text"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        />
    <Button
        android:id="@+id/button_text"
        android:text="@string/find_text_button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_face"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
        android:id="@+id/button_face"
        android:layout_width="0dp"
        android:text="@string/find_face_contour_button"
        android:layout_height="55dp"
        app:layout_constraintLeft_toRightOf="@id/button_text"
        app:layout_constraintRight_toLeftOf="@id/button_cloud_text"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
        android:id="@+id/button_cloud_text"
        android:layout_width="0dp"
        android:text="@string/find_text_cloud_button"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@id/button_face"
        app:layout_constraintRight_toLeftOf="@id/button_run_custom_model"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
        android:id="@+id/button_run_custom_model"
        android:text="@string/find_objects_button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        app:layout_constraintLeft_toRightOf="@id/button_cloud_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="280dp"
        android:text="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/graphic_overlay"
        app:layout_constraintTop_toBottomOf="parent
"
        app:layout_constraintVertical_bias="0.64" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="20dp"
        android:text="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/graphic_overlay"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graphic_overlay"
        app:layout_constraintVertical_bias="0.707" />

</androidx.constraintlayout.widget.ConstraintLayout>